--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>yashwanthm3012</title>
+  </head>
 
+  <body>
+    <h1>This is a Simple Portfolio Website </h1>
+  </body>
+</html>
