--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   <body>
     <h1>This is a Simple Portfolio Website </h1>
     <h2>My Name is yashwanthm3012</h2>
+
+    <div class="github">
+      <a href="https://github.com/yashwanthm3012">
+        <img src="github.png" alt="Github" style="width:42px;height:42px;">
+      </a> 
+    </div>
+
   </body>
 </html>
