--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
 
   <body>
-    <h1>This is a Simple Portfolio Website </h1>
-    <h2>My Name is yashwanthm3012</h2>
+    <h1>Hi I'm YASH</h1>
+    
 
     <div class="github">
       <a href="https://github.com/yashwanthm3012">
-        <img src="github.png" alt="Github" style="width:42px;height:42px;">
+        <img src="github.png" alt="Github" style="width:28px;height:28px;">
       </a> 
     </div>
 
