added mail link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
   <body>
     <h1>Hi I'm YASH</h1>
+
+    <p style="color: red">I am a student</p>
+    
+    <div class="mail">
+      <a href="mailto:dev.yashwanthm3012@gmail.com" style="color: rebeccapurple;">dev.yashwanthm3012@gmail.com</a>
+    </div>
     
 
     <div class="github">
