--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Hi I'm YASH</h1>
 
-    <p style="color: red">I am a student</p>
+    <p style="color: red"><mark>I am a student</mark> </p>
     
     <div class="mail">
       <a href="mailto:dev.yashwanthm3012@gmail.com" style="color: rebeccapurple;">dev.yashwanthm3012@gmail.com</a>
