--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
   <body>
 
-    <div class="intro">
+    <!--<div class="intro">
       <h1 class="logo-header">
           <span class="logo">YA</span><span class="logo">SH</span>
       </h1>
-    </div>    
+    </div>-->    
  
     <h1 class="Title">Yashwanth M</h1>
     
@@ -28,9 +28,18 @@
       </svg>
     </div>
 
-    <p class="Projects">Projects</p>
-    <p class="Info">Info</p>
-    <p class="Contact">Contact</p>
+    <button class="astext" onclick="project()" >
+      <span class="Projects" id="P1">Projects</span>
+    </button>
+
+    <button class="astext" onclick="geek()">
+      <span class="Info" id="I1">Info</span>
+    </button>
+    
+    <button class="astext" onclick="geek()">
+      <span class="Contact" id="C1">Contact</span>
+    </button>
+
 
     <!--<div class="mail">
       <a href="mailto:dev.yashwanthm3012@gmail.com">
