updated splash page

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
   <body>
 
-    <!--<div class="intro">
+    <div class="intro">
       <h1 class="logo-header">
           <span class="logo">YA</span><span class="logo">SH</span>
       </h1>
-    </div>-->    
+    </div>
  
     <h1 class="Title">Yashwanth M</h1>
     
