--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
     <h1 class="Title">Yashwanth M</h1>
     
-    <p class="about">Student & Freelancer</p>
+    <p class="about">Student</p>
 
     <div class="snow">
       <svg xmlns="http://www.w3.org/2000/svg" id="snoww" width="16" height="16" fill="currentColor" class="bi bi-snow" viewBox="0 0 16 16">
