--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <!-- Navigation Link -->
     <div class="nav-container">
-      <a href="blog.html">Go to Blog →</a>
+      <a href="blog.html">Blog</a>
     </div>
 
     <!-- JS -->
