--- a/blog.html
+++ b/blog.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Blogs - Yashwanth M</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8" />
+  <title>Blogs</title>
+  <!-- Load Google Fonts with lighter weights -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&family=Roboto:wght@200;300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/blog.css">
 </head>
 <body>
-  <h1>📝 My Blogs</h1>
+  <div class="header">
+    <div class="Title">My Blogs</div>
+  </div>
 
-  <ul>
-    <li><a href="blogs/post1.html">🧠Federated Learning</a></li>
-  </ul>
+  <div class="content">
+    <ul>
+      <li><a href="blogs/post1.html">Federated Learning</a></li>
+    </ul>
 
-  <a href="index.html">← Back to Home</a>
+    <a class="back-link" href="index.html">← Back to Home</a>
+  </div>
 </body>
 </html>
