--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
 
   <body>
 
-    <!-- Title -->
-    <div class="title-wrapper">
-      <h1 class="Title">Yashwanth M</h1>
+    <div class="header">
+      <div class="Title">Yashwanth M</div>
+      <div class="nav-links">
+        <a href="blog.html">Blog</a>
+        <a href="papershelf.html">Papershelf</a>
+      </div>
     </div>
     
-    <!-- Navigation Link -->
-    <div class="nav-container">
-      <a href="blog.html">Blog</a>
-    </div>
 
     <!-- JS -->
     <script src="assets/js/app.js"></script>
