--- a/blogs/post1.html
+++ b/blogs/post1.html
@@ -28,14 +28,14 @@
       finance, or mobile devices.
     </p>
 
-    <h2>🔍 Key Advantages:</h2>
+    <h2>Key Advantages:</h2>
     <ul>
       <li>Data remains on the user's device</li>
       <li>Improved privacy and security</li>
       <li>Reduces bandwidth usage</li>
     </ul>
 
-    <h2>📱 Real-World Example:</h2>
+    <h2>Real-World Example:</h2>
     <p>
       Google uses Federated Learning in Gboard (its keyboard app) to learn how people type and suggest better
       predictions — all while keeping user data private.
@@ -43,7 +43,7 @@
   </article>
 
   <footer>
-    <p>📅 Posted on April 6, 2025 by Yashwanth M</p>
+    <p>Posted on April 6, 2025 by Yashwanth M</p>
     <a href="../index.html">← Back to Home</a>
   </footer>
 </body>
