--- a/papershelf.html
+++ b/papershelf.html
@@ -5,7 +5,7 @@
   <title>Blogs</title>
   <!-- Load Google Fonts with lighter weights -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&family=Roboto:wght@200;300;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/blog.css">
+  <link rel="stylesheet" href="assets/css/blog-paper.css">
 </head>
 <body>
   <div class="header">
@@ -15,6 +15,8 @@
   <div class="content">
     <ul>
       <li><a href="https://drive.google.com/file/d/1mQju7EAUrUPUtZzgYW0KE-h-9kGqAN_Z/view?usp=drive_link">Neural Architecture Search without Training</a></li>
+      <li><a href="https://drive.google.com/file/d/1YoEDnCO36inrqFmEB3QUXJzMGkgMg6Mc/view?usp=drive_link">Multi Objective Neural Architecture Search</a></li>
+
     </ul>
 
     <a class="back-link" href="index.html">← Back to Home</a>
