--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
   <title>Blogs</title>
   <!-- Load Google Fonts with lighter weights -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&family=Roboto:wght@200;300;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/blog-paper.css">
+  <link rel="stylesheet" href="assets/css/blog.css">
 </head>
 <body>
   <div class="header">
