--- a/papershelf.html
+++ b/papershelf.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Blogs</title>
-  <!-- Load Google Fonts with lighter weights -->
+  <title>Papershelf</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&family=Roboto:wght@200;300;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/blog-paper.css">
+  <link rel="stylesheet" href="assets/css/paper.css">
 </head>
 <body>
   <div class="header">
@@ -14,9 +13,16 @@
 
   <div class="content">
     <ul>
-      <li><a href="https://drive.google.com/file/d/1mQju7EAUrUPUtZzgYW0KE-h-9kGqAN_Z/view?usp=drive_link">Neural Architecture Search without Training</a></li>
-      <li><a href="https://drive.google.com/file/d/1YoEDnCO36inrqFmEB3QUXJzMGkgMg6Mc/view?usp=drive_link">Multi Objective Neural Architecture Search</a></li>
-
+      <li class="paper-card">
+        <a href="https://drive.google.com/file/d/1-mYuRMGGRyguK4VJntxJb3Unq0Z6EBCT/view?usp=sharing" target="_blank">
+          <div class="paper-title">Federated Learning</div>
+        </a>
+        <div class="paper-meta">MacMahan et al. — 2017</div>
+        <div class="paper-description">
+          A comprehensive overview of Federated Learning principles, challenges, and applications, emphasizing data privacy and decentralized training.
+        </div>
+      </li>
+      <!-- Add more paper cards below as needed -->
     </ul>
 
     <a class="back-link" href="index.html">← Back to Home</a>
