--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
 
   <div class="content">
     <ul>
+      <li><a href="blogs/post2.html">My First PR</a></li>
       <li><a href="blogs/post1.html">Federated Learning</a></li>
     </ul>
 
