--- a/blogs/post2.html
+++ b/blogs/post2.html
@@ -37,25 +37,23 @@
       </section>
 
       <section>
-        <h2>My Journey: From Failing to Fascination</h2>
+        <h2>From Failing to Fascination</h2>
         <p>
           Looking back, my struggle with Theory of Computation wasn't because the subject was inherently difficult. It was because I couldn't see its <strong>real-world applications</strong>. The abstract nature of finite automata, context-free grammars, and Turing machines felt disconnected from the programming I loved.
         </p>
         <p>
-          After failing twice, I finally passed the subject with minimal understanding. I memorized what I needed to pass, but the deeper concepts remained a mystery. I shelved the knowledge as "something I'll never need again."
+          After failing twice, I finally passed the subject with minimal understanding and I shelved the knowledge as "something I'll never need again."
         </p>
         <p>
-          The Keybr project became my unexpected turning point. As I explored the code generation system, concepts that once confused me suddenly began making perfect sense. The abstract theories had found their practical application right in front of me.
+          The Keybr project became my unexpected turning point. As I explored the code generation system, concepts that once confused me suddenly began making perfect sense. The theories I had studied in class were now the backbone of a real-world application.
         </p>
       </section>
 
       <section>
         <h2>Expectation vs Reality</h2>
         <p>
-          <strong>Initial assumption:</strong> The code snippets shown in Keybr were manually written and curated from a database of examples.
-        </p>
-        <p>
-          <strong>Reality:</strong> The code wasn't hardcoded at all. Instead, it was being generated dynamically using grammar rules—the very concepts I struggled with in university!
+          Initially I though there will be bunch of hardcoded examples for each language, and I would just need to add a few Java examples. 
+          But in reality it was different it was being dynamically generated using grammar rules which I ignored during my studies.
         </p>
         <p>
           That's when the real curiosity kicked in, and I found myself diving deep into a subject I once dreaded.
@@ -146,19 +144,6 @@ static readonly JAVA = new Syntax("java", "Java", grammar_java);</code></pre>
       </section>
 
       <section>
-        <h2>What Makes This System Clever</h2>
-        <p>
-          By using a grammar-based approach instead of hardcoded examples, Keybr gains several advantages:
-        </p>
-        <ul>
-          <li><strong>Infinite variety:</strong> The system can generate unlimited unique code samples</li>
-          <li><strong>Syntactic correctness:</strong> All generated code follows proper syntax rules</li>
-          <li><strong>Customizable difficulty:</strong> The generator can adapt complexity based on user skill</li>
-          <li><strong>Maintainability:</strong> Adding new language features requires updating grammar rules, not creating new examples</li>
-        </ul>
-      </section>
-
-      <section>
         <h2>Summary: The Grammar-Based Generator Workflow</h2>
 <pre><code>.g grammar file
     ↓
@@ -215,20 +200,15 @@ statement
           Funny how things come full circle.
         </p>
         <p>
-          There's a profound lesson here about computer science education. The theoretical concepts we learn aren't just academic exercises—they're the foundational building blocks that power the tools we use every day. From the parser in your IDE to the compiler that builds your code, these "abstract" concepts are everywhere.
-        </p>
-        <p>
           So, to anyone struggling with theory-heavy CS subjects: <strong>stick with it</strong>. You never know when or how that knowledge might come back — and help you build something really cool.
         </p>
       </section>
       
       <section>
         <h2>Want to Explore This Further?</h2>
-        <p>If this story resonated with you, consider these next steps:</p>
         <ul>
           <li>Check out the <a href="https://github.com/aradzie/keybr" target="_blank">Keybr Repository</a> on GitHub</li>
           <li>Try building your own grammar-based code generator</li>
-          <li>Share your own story of rediscovering the value of a difficult subject</li>
         </ul>
       </section>
       
