--- a/blog.html
+++ b/blog.html
@@ -14,9 +14,9 @@
 
   <div class="content">
     <ul>
-      <li><a href="blogs/post2.html">My First PR</a></li>
-      <li><a href="blogs/post1.html">Federated Learning</a></li>
-    </ul>
+      <li><span class="date">29-04-2025</span> <a href="blogs/post2.html">My First PR</a></li>
+      <li><span class="date">06-04-2025</span> <a href="blogs/post1.html">Federated Learning</a></li>
+    </ul>    
 
     <a class="back-link" href="index.html">← Back to Home</a>
   </div>
