--- a/papershelf.html
+++ b/papershelf.html
@@ -14,15 +14,26 @@
   <div class="content">
     <ul>
       <li class="paper-card">
+        <a href="https://drive.google.com/file/d/174tKZGAwkzzxZXHsPBP3rAT-pYj2bmsM/view?usp=drive_link" target="_blank">
+          <div class="paper-title">Federated Learning over Harmonized Data Silos</div>
+        </a>
+        <div class="paper-meta">Dimitris Stripelis, Jose Luis Ambite</div>
+        <div class="date">May 02, 2025</div>
+        <div class="paper-description">
+          A deep dive into harmonized data sharing methods in FL setups, presenting an advanced approach for multi-institutional collaboration.
+        </div>
+      </li>
+
+      <li class="paper-card">
         <a href="https://drive.google.com/file/d/1-mYuRMGGRyguK4VJntxJb3Unq0Z6EBCT/view?usp=sharing" target="_blank">
           <div class="paper-title">Federated Learning</div>
         </a>
         <div class="paper-meta">MacMahan et al. — 2017</div>
+        <div class="date">April 04, 2025</div>
         <div class="paper-description">
           A comprehensive overview of Federated Learning principles, challenges, and applications, emphasizing data privacy and decentralized training.
         </div>
       </li>
-      <!-- Add more paper cards below as needed -->
     </ul>
 
     <a class="back-link" href="index.html">← Back to Home</a>
